More shapes added

--- a/index.html
+++ b/index.html
@@ -10,3 +10,16 @@
 <div id="triangle-down"></div>
 <div id="triangle-left"></div>
 <div id="triangle-right"></div>
+
+<div id="triangle-topleft"></div>
+<div id="triangle-topright"></div>
+<div id="triangle-bottomleft"></div>
+<div id="triangle-bottomright"></div>
+
+<div id="trapezoid-right"></div>
+<div id="trapezoid-isosceles"></div>
+<div id="parallelogram"></div>
+
+<div id="pentagon"></div>
+
+
